--- a/front-end/index.html
+++ b/front-end/index.html
@@ -14,7 +14,7 @@
     <!-- font awesome link -->
 
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
-    <link rel="icon" type="image/png" href="/public/shopping-bag.png" />
+    <link rel="icon" type="image/png" href="/shopping-bag.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>port folio</title>
   </head>
